--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "url": "https://github.com/webrebels/web-rebels-2013/issues"
   },
   "licenses": [],
-  "subdomain": "www",
+  "subdomain": "webreb2013",
   "domains": [
     "www.webrebels.org",
     "webrebels.org"
