--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-rebels-2013",
-  "version": "0.0.1-25",
+  "version": "0.0.1-31",
   "author": {
     "name": "Trygve Lie",
     "email": "post@trygve-lie.com"
@@ -44,6 +44,7 @@
   ],
   "dependencies": {
     "express": "3.x",
-    "ejs": "*"
+    "ejs": "0.8.x",
+    "ws": "0.4.x"
   }
 }
