--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   ],
   "dependencies": {
     "express": "3.x",
+    "winston": "0.6.x",
+    "convict": "0.1.x",
     "ejs": "0.8.x",
     "ws": "0.4.x"
   }
