--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "web-rebels-2013",
   "version": "0.0.1-36",
   "author": {
-    "name": "Trygve Lie",
-    "email": "post@trygve-lie.com"
+    "name": "Web Rebels",
+    "email": "kontor@webrebels.org"
   },
   "description": "The Web Rebels 2013 web site",
   "main": "",
